quick buy button issue on ios

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -12460,6 +12460,8 @@ a.results-popular__link:hover {
   bottom: 0;
   width: 100%;
   z-index: 2;
+  height: var(--btn-size);
+  width: var(--btn-size);
 }
 
 .product-grid-item__swatch--hover .swatch__button {
